welcome.lessons.welcome.bat.bool1.SleepIn.scala.error
sleepIn:2: error: value or is not a member of Boolean
	if(!weekday or vacation){
                    ^sleepIn:6: error: Boolean(false) does not take parameters
		return false();
                            ^